2003-09-25  John Levon  <levon@movementarian.org>

	* daemon/opd_sfile.c: bump LRU_AMOUNT to 1000

2003-09-24  John Levon  <levon@movementarian.org>

	* doc/opcontrol.1.in:
	* doc/oprofile.xml: document thread and cpu
	profiling a bit

	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* daemon/oprofiled.c:
	* utils/opcontrol: implement per-CPU profiling,
	not tested yet

2003-09-24  John Levon  <levon@movementarian.org>

	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_test.c:
	* libdb/odb_hash.h:
	* libpp/op_header.cpp:
	* libpp/profile.cpp: remove samples_odb_t.err_msg
	entirely - prefer UNIX-style errno returns. Modify
	error messages to match

2003-09-24  John Levon  <levon@movementarian.org>

	* dae/opd_sample_files.c:
	* daemon/opd_sample_files.c:
	* libpp/op_header.cpp:
	* libpp/profile.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/db_test.c:
	* libdb/odb_hash.h:
	* libdb/odb_manage.c: make odb_open return errno
	instead of EXIT_FAILURE/SUCCESS to allow EMFILE
	handling. Also do not leak fd's on failure.

	* libutil/op_types.h: cookie_t moved into daemon/

	* daemon/: major rewrite: move to a hash on all
	parameters of struct transient. Lots of readability
	cleanups, plus resistance to cookie lookup failures,
	and hitting open file limits. Additionally thread
	profiling for kernel threads is enabled now.

2003-09-24  John Levon  <levon@movementarian.org>

	* daemon/opd_image.c: remove support for missing
	CTX_TGID

2003-09-24  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: remove /proc/kcore support

2003-09-22  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_parse_proc.c: both op_file.h and op_fileio.h are needed

2003-09-22  John Levon  <levon@movementarian.org>

	* doc/CodingStyle: document doxygen placing rule

	* libop/op_alloc_counter.h:
	* libop/op_get_interface.c: